[package]
name = "meta_read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpl-token-metadata = "3.2.3"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde_json = "1.0.1"
serde = "1.0.193"
